--- a/Assets/responsive.css
+++ b/Assets/responsive.css
@@ -3,6 +3,7 @@
   .header {
     flex-flow: column nowrap;
     overflow: hidden;
+    height:22vh;
   }
   .header .left-pane .title {
     font-size: 1.5em;
@@ -18,7 +19,7 @@
     font-size: 2em;
   }
   .container {
-    width: 95%;
+    width: 90%;
   }
   .container .content {
     width: 95%;
