--- a/Assets/style.css
+++ b/Assets/style.css
@@ -11,6 +11,7 @@ body {
   z-index: 3;
   left: 0px;
   top: 0px;
+  color:#bfff;	
   height:80px;
   width: 100%;
   overflow: auto;
@@ -25,9 +26,9 @@ body {
   justify-content: space-around;
 }
 .header .left-pane img {
-  width: 5em;
-  height: 5em;
-  margin: 2px 10px;
+  width: 3em;
+  height: 3em;
+  margin: 10px 10px;
   vertical-align: middle;
 }
 .header .left-pane .title {
@@ -72,6 +73,7 @@ body {
 }
 .welcome .text-1 {
   font-size: 4em;
+  color:#bfff;
 }
 .container {
   width: 90%;
