--- a/Assets/style.css
+++ b/Assets/style.css
@@ -73,7 +73,7 @@ body {
 }
 .welcome .text-1 {
   font-size: 4em;
-  color:#bfff;
+  color:black;
 }
 .container {
   width: 90%;
@@ -83,13 +83,15 @@ body {
 .container .content {
   width: 75%;
   margin: 30px auto;
+  box-shadow:lightgrey 1px 1px 3000px 1px;
   display: block;
   background: white;
   border-left: 10px solid blueviolet;
 }
-.container .icon {
-  font-size: 60px;
-  display: block;
+ .icon {
+  width: 150px;
+  height: 150px;
+  vertical-align:middle;
   text-align: center;
   color: blueviolet;
 }
@@ -101,11 +103,11 @@ body {
   color: blueviolet;
 }
 .container .content .title {
-  color: blueviolet;
+  color : blueviolet;
 /*   text-align: center; */
-  padding: 20px auto;
-  font-size: 4em;
-  margin: 0px 10px;
+  padding : 30px 20px;
+  font-size : 4em;
+  margin : 30px 10px;
 }
 .container .content .text {
   padding: 30px;
