--- a/Assets/style.css
+++ b/Assets/style.css
@@ -89,8 +89,8 @@ body {
   border-left: 10px solid blueviolet;
 }
  .icon {
-  width: 150px;
-  height: 150px;
+  width: 120px;
+  height: 120px;
   vertical-align:middle;
   text-align: center;
   color: blueviolet;
@@ -106,11 +106,11 @@ body {
   color : blueviolet;
 /*   text-align: center; */
   padding : 30px 20px;
-  font-size : 4em;
+  font-size : 3.5em;
   margin : 30px 10px;
 }
 .container .content .text {
-  padding: 30px;
+  padding: 5px 30px;
   font-family: tillana-regular;
   font-size: 2.0em;
 }
