--- a/Assets/style.css
+++ b/Assets/style.css
@@ -125,3 +125,9 @@ body {
   text-align: center;
   width: 100%;
 }
+
+@media screen and (max-width:600px){
+  .footer{
+    font-size:10px;
+  }
+}
