--- a/Assets/responsive.css
+++ b/Assets/responsive.css
@@ -4,18 +4,41 @@
     flex-flow: column nowrap;
     overflow: hidden;
     height:22vh;
+    display:none;
   }
   .header .left-pane .title {
     font-size: 1.5em;
-    color:#bfff;
+    color:white;
   }
   .links a {
     padding: 5px;
-    font-size: 1.3em;
+    font-size: .1em;
   }
   .welcome {
-  	margin-top:15%;
-    height: 60%;
+    margin-top:0%;
+    position:relative;
+    height: 30%;
+  }
+  .links {
+    position:absolute;
+    bottom:0px;
+    left:0px;
+    width:100%;
+  }
+  .links__wrapper {
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+  }
+  .links__wrapper a {
+    text-decoration: none;
+    color:white;
+    padding:10px;
+  }
+
+  .links__wrapper a:hover {
+    text-decoration: none;
+    color:white;
   }
   .welcome .text-1 {
     font-size: 1.8em;
