--- a/Assets/responsive.css
+++ b/Assets/responsive.css
@@ -18,6 +18,7 @@
     margin-top:0%;
     position:relative;
     height: 20%;
+    padding: 16px !important;
     color:white;
   }
   .links-small {
